assets/styles/style.css
/* =================================================== VARIABLES */
/* =================================================== FONT FACES */
@font-face {
  font-family: "Helvetica Neue";
  src: url("../fonts/helvetica-neue.ttf");
  font-weight: 400;
}

@font-face {
  font-family: "Helvetica Neue";
  src: url("../fonts/helvetica-neue-medium.ttf");
  font-weight: 600;
}

@font-face {
  font-family: "Helvetica Neue";
  src: url("../fonts/helvetica-neue-condensed-bold.ttf");
  font-weight: 700;
}

/* =================================================== GENERAL */
body {
  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
  color: #313131;
}

header {
  height: 50px;
  background-color: #fff;
}

main {
  height: calc(100vh - 50px);
  overflow: scroll;
}

main::-webkit-scrollbar {
  display: none;
}

aside {
  height: 50px;
  background-color: #fff;
}

a {
  color: #313131;
}

a:hover {
  color: #313131;
}

.hidden {
  position: absolute;
  clip: rect(1px, 1px, 1px, 1px);
}

/* --------------------------------------------------- GENERAL - Media Queries */
@media screen and (min-width: 992px) {
  body {
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: 200px 1fr 200px;
        grid-template-columns: 200px 1fr 200px;
    -ms-grid-rows: 50% 50%;
        grid-template-rows: 50% 50%;
  }
  header,
  main,
  aside {
    height: 100vh;
  }
}

/* =================================================== MAIN */
.capstone-logo {
  width: 140px;
  height: 19px;
}

/* =================================================== MAIN */
.collection-container {
  display: -ms-grid;
  display: grid;
  -ms-grid-rows: 3fr 2fr;
      grid-template-rows: 3fr 2fr;
}

.collection__img1,
.collection__img2 {
  width: 100%;
}

.collection__item1 .collection__img1 {
  background: #f5f5f5 url("../images/model.png") center/contain no-repeat;
}

.collection__item1 .collection__img2 {
  background: #f5f5f5 url("../images/model2.png") bottom center/cover no-repeat;
}

.collection__item2 .collection__img1 {
  background: #f5f5f5 url("../images/model2.png") bottom center/cover no-repeat;
}

.collection__item2 .collection__img2 {
  background: #f5f5f5 url("../images/model.png") center/contain no-repeat;
}

.collection__text-box {
  height: 100%;
}

.collection__header {
  line-height: 1.6;
  font-size: 1.3rem;
}

/* --------------------------------------------------- MAIN - Media Queries */
@media screen and (min-width: 768px) {
  .collection-container {
    -ms-grid-columns: 1fr 1fr;
        grid-template-columns: 1fr 1fr;
    grid-column-gap: 2px;
  }
  .collection__img1 {
    -ms-grid-column: 1;
    -ms-grid-column-span: 2;
    grid-column: 1 / 3;
    -ms-grid-row: 1;
    -ms-grid-row-span: 2;
    grid-row: 1 / 3;
    background-size: 60%;
    background-position: left bottom;
  }
  .collection__text-box {
    position: absolute;
    width: 100%;
    height: 100%;
    -ms-grid-column: 2;
    grid-column: 2;
    -ms-grid-row: 2;
    grid-row: 2;
    background-color: #fff;
  }
}

@media screen and (min-width: 992px) {
  .collection-container {
    -ms-grid-rows: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
  }
  .collection__img1 {
    -ms-grid-column: 1;
    grid-column: 1;
    -ms-grid-row: 1;
    -ms-grid-row-span: 2;
    grid-row: 1 / 3;
    background-size: cover;
    background-position: center bottom;
  }
}
/*# sourceMappingURL=style.css.map */

